# reverie

./: Cargo.toml  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  publish.yml  stable.yml
companion/: Cargo.toml  README.md  circuit.txt  witness.txt
companion/src/: composite.rs  fieldswitched.rs  main.rs  oneshot.rs  witness.rs
companion/src/instruction/: bin.rs  bristol.rs  mod.rs
src/: bin.rs  consts.rs  dump  fieldswitching_proof.rs  lib.rs  main.rs  oracle.rs  proof.rs  tests.rs  util.rs  witness.rs
src/algebra/: mod.rs  ring.rs  util.rs
src/algebra/gf2/: batch.rs  domain.rs  domain64.rs  domain8.rs  element.rs  mod.rs  recon.rs  scalar.rs  share.rs  share64.rs  share8.rs
src/algebra/gf2_vec/: batch.rs  domain64.rs  mod.rs  scalar.rs  share64.rs
src/algebra/gf2_vec85/: batch.rs  domain85.rs  mod.rs  scalar.rs  share64.rs
src/algebra/gf2p8/: batch.rs  mod.rs  share.rs
src/algebra/p32/: batch.rs  domain8.rs  mod.rs  scalar.rs  share8.rs
src/algebra/z64/: batch.rs  domain.rs  domain8.rs  mod.rs  recon.rs  scalar.rs  share.rs  share8.rs
src/crypto/: hash.rs  mod.rs  prf.rs  prg.rs  prng.rs  ring.rs  ro.rs  tree.rs
src/crypto/commitment/: mod.rs
src/crypto/merkle/: mod.rs  set.rs  tree.rs
src/crypto/ring/: hash.rs  mod.rs  rng.rs
src/crypto/tree/: mod.rs  serde.rs  serialize.rs
src/eval/: mod.rs
src/fieldswitching/: mod.rs  online.rs  preprocessing.rs  util.rs
src/fieldswitching/online/: mod.rs  prover.rs  verifier.rs
src/fieldswitching/online1/: mod.rs  prover.rs
src/fieldswitching/preprocessing/: mod.rs  prover.rs  util.rs  verifier.rs
src/fieldswitching/preprocessing1/: mod.rs
src/fs/: mod.rs  rng.rs  view.rs
src/fs/rng/: mod.rs
src/fs/scope/: mod.rs  util.rs
src/generator/: batch.rs  mod.rs  share.rs
src/interpreter/: combine.rs  mod.rs  single.rs
src/online/: instr.rs  mod.rs  prover.rs  tests.rs  verifier.rs
src/online/prover/: exec.rs  mod.rs  proof.rs
src/pp/: constants.rs  generator.rs  mod.rs  prover.rs  verifier.rs
src/preprocessing/: mod.rs  preprocessing.rs  prover.rs  util.rs  verifier.rs
src/prf/: mod.rs  prf.rs  tree.rs
src/proof/: mod.rs
src/transcript/: mod.rs  prover.rs
src/transcript/verifier/: mod.rs  online.rs  preprocess.rs
src/util/: eval.rs  mod.rs  reader.rs  subset.rs  vec.rs  writer.rs
src/util/array/: mod.rs  serde.rs
src/util/writer/: map.rs  mod.rs  switch.rs  void.rs
