[package]
name = "reverie-zk"
description = "An efficient implementation of the NIZKPoK outlined in KKW 2018"
license = "AGPL-3.0"
homepage = "https://github.com/trailofbits/reverie"
repository = "https://github.com/trailofbits/reverie"
version = "0.3.0"
authors = [
    "Mathias Hall-Andersen <mathias@hall-andersen.dk>",
    "William Woodruff <william@trailofbits.com>",
    "Eric Hennenfent <eric.hennenfent@trailofbits.com>"
]
edition = "2018"
readme = "README.md"
keywords = ["crypto", "cryptography", "zero-knowledge"]
categories = ["cryptography"]
build = "build.rs"

[package.metadata.release]
no-dev-version = true
disable-publish = true # handled by GitHub Actions

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
aesni = "0.10"
async-std = "1.7"
bincode = "1.3.3"
blake3 = "1.0.0"
chacha = "0.3"
clap = "3.0.0"
mcircuit = "0.1.7"
num-traits = "0.2"
rand = "0.8"
rayon = "1.5"
serde = {version = "1.0.125", features = ["derive"]}
built = {version = "0.4.4", features = ["git2", "chrono", "semver"] }

[build-dependencies]
built = "0.4.4"

[lib]
name = "reverie"
path = "src/lib.rs"

[[bin]]
name = "speed-reverie"
path = "src/main.rs"
