[package]
authors = ["Mathias Hall-Andersen <mathias@hall-andersen.dk>"]
edition = "2018"
name = "reverie-companion"
version = "0.1.0"

[dependencies]
procfs = "0.8.0"
async-channel = "*"
async-scoped = "0.4.1"
async-std = "*"
async-stream = "0.2.1"
clap = "2.33.1"
rand = "0.7.3"
reverie = {path = "../"}
serde = {version = "1.0", features = ["derive"]}
rayon = "1.4"