[package]
authors = ["Mathias Hall-Andersen <mathias@hall-andersen.dk>"]
edition = "2018"
name = "reverie-companion"
version = "0.1.0"

[dependencies]
sysinfo = "0.15.3"
async-channel = "1.5"
async-scoped = "0.4"
async-std = "1.7"
async-stream = "0.2"
clap = "2.33.1"
rand = "0.7.3"
reverie-zk = { path = "../" }
serde = {version = "1.0", features = ["derive"]}
rayon = "1.4"
thiserror = "1.0.23"
bincode = "1.3.2"
